--- a/goodFateAttendance.html
+++ b/goodFateAttendance.html
@@ -17,30 +17,37 @@
 <nav class="navbar navbar-inverse navbar-fixed-top">
   <div class="container-fluid">
     <div class="navbar-header">
+      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>                        
+      </button>
       <a class="navbar-brand" href="#">Government Portal</a>
     </div>
-    <ul class="nav navbar-nav">
-      <li><a href="index.html">Home</a></li>
-      <li><a href="karmaIsaBitch.html">Feedback</a></li>
-      <li class="active dropdown">
-        <a class="dropdown-toggle" data-toggle="dropdown" href="#">Attendance<span class="caret"></span></a>
-        <ul class="dropdown-menu">
-          <li><a href="#">Students</a></li>
-          <li class="active"><a href="#">Teachers</a></li> 
-        </ul>
-      </li>
-      <li><a href="#">Time Table</a></li>
-      <li class="dropdown">
-        <a class="dropdown-toggle" data-toggle="dropdown" href="#">More<span class="caret"></span></a>
-        <ul class="dropdown-menu">
-          <li><a href="additionalActivities.html">Add Updates</a></li>
-        </ul>
-      </li>
-    </ul>
-    <ul class="nav navbar-nav navbar-right">
-        <li><a href="#"><span class="glyphicon glyphicon-user"></span> Name</a></li>
-        <li><a href="#"><span class="glyphicon glyphicon-log-in"></span> Logout</a></li>
-    </ul>
+    <div class="collapse navbar-collapse" id="myNavbar">
+      <ul class="nav navbar-nav">
+        <li><a href="index.html">Home</a></li>
+        <li><a href="karmaIsaBitch.html">Feedback</a></li>
+        <li class="active dropdown">
+          <a class="dropdown-toggle" data-toggle="dropdown" href="#">Attendance<span class="caret"></span></a>
+          <ul class="dropdown-menu">
+            <li><a href="#">Students</a></li>
+            <li class="active"><a href="#">Teachers</a></li> 
+          </ul>
+        </li>
+        <li><a href="#">Time Table</a></li>
+        <li class="dropdown">
+          <a class="dropdown-toggle" data-toggle="dropdown" href="#">More<span class="caret"></span></a>
+          <ul class="dropdown-menu">
+            <li><a href="additionalActivities.html">Add Updates</a></li>
+          </ul>
+        </li>
+      </ul>
+      <ul class="nav navbar-nav navbar-right">
+          <li><a href="#"><span class="glyphicon glyphicon-user"></span> Name</a></li>
+          <li><a href="#"><span class="glyphicon glyphicon-log-in"></span> Logout</a></li>
+      </ul>
+    </div>
   </div>
 </nav>
 <br>
